--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Yao Yingying</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,15 +17,15 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p><!--[-->I got reprogrammed by a rogue AI<!--]--><br />
-					<!--[-->and now I'm totally cray<!--]--></p>
+					<h1 id="logo"><a href="#">Yingying</a></h1>
+					<p><!--[-->Final Year NUS Computing Student<!--]--><br />
+					<!--[-->Majoring in Information Systems<!--]--></p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#three">Tableau Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -53,11 +53,10 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p><!--[-->Just an incredibly simple responsive site<!--]--><br />
-										<!--[-->template freebie by <a href="http://html5up.net">HTML5 UP</a><!--]-->.</p>
+										<h2>AboutMe</h2>
+
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Wrote my first line of Pseudocode when i was 15 during my computer studies class. Learnt about managing the finances of a business while studying for my accounting and finance diploma. Switched from business to computing in university and never looked back since.</p>
 								</div>
 							</section>
 
@@ -65,14 +64,14 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Some stuff that i am working on recently</p>
 									<ul class="feature-icons">
-										<li class="fa-code"><!--[-->Write all the code<!--]--></li>
-										<li class="fa-cubes"><!--[-->Stack small boxes<!--]--></li>
-										<li class="fa-book"><!--[-->Read books and stuff<!--]--></li>
-										<li class="fa-coffee"><!--[-->Drink much coffee<!--]--></li>
-										<li class="fa-bolt"><!--[-->Lightning bolt<!--]--></li>
-										<li class="fa-users"><!--[-->Shadow clone technique<!--]--></li>
+										<li class="fa-code"><!--[-->Robotics Process Automation<!--]--></li>
+										<li class="fa-coffee"><!--[-->Test Automation<!--]--></li>
+										<li class="fa-cubes"><!--[-->Dashboards<!--]--></li>
+										<li class="fa-book"><!--[-->Software Development<!--]--></li>
+										<li class="fa-bolt"><!--[-->Write with my left hand<!--]--></li>
+										<li class="fa-users"><!--[-->Talk to you about random stuff<!--]--></li>
 									</ul>
 								</div>
 							</section>
@@ -80,28 +79,58 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Tableau projects</h3>
+									<p>Featuring some of the tableau projects that i worked on during my free time</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://public.tableau.com/shared/H66233GS9?:display_count=no&:origin=viz_share_link" class="image"><img src="images/10yearsnus.png" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Possibly broke spacetime<!--]--></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4><!--[-->10 Years of National University of Singapore<!--]--></h4>
+												<p>The purpose of this dashboard is to view the changes in the full-time undergraduate population within each faculty during 2008 to 2018.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://public.tableau.com/shared/4XP6C95DX?:display_count=yes&:origin=viz_share_link" class="image"><img src="images/notablealumni.png" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Terraformed a small moon<!--]--></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4><!--[-->Notable Alumni of NUS<!--]--></h4>
+												<p>This dashboard is designed with a sunburst layout to illustrate the notable alumni of NUS from various faculty.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/bubbletea.png" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Snapped dark matter in the wild<!--]--></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4><!--[-->Bubble Tea Chain Stores In Singapore<!--]--></h4>
+												<p>Inspired while i was walking past LiHo and realized that KOI is just 2 stores away from their competitor.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+							<section id="three">
+								<div class="container">
+									<h3>Web projects</h3>
+									<p>Featuring some of the projects that i worked on during my university and internships </p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/freelancing.png" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Can I Help<!--]--></h4>
+												<p>Worked with three other team members on IS3106 project. Came up with a one stop portal for anyone to post jobs for freelancers</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://yingying96.github.io/hats-docs/#/" class="image"><img src="images/hats-doc.png" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Documentation for HATS<!--]--></h4>
+												<p>Full documentation site for automated testing tool built during internship</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/construction.png" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Work In Progress!<!--]--></h4>
+												<p>Revamp existing website for client in the F&B industry</p>
 											</div>
 										</article>
 									</div>
@@ -131,7 +160,7 @@
 							</section>
 
 						<!-- Five -->
-						<!--
+						
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -459,7 +488,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								</div>
 							</section>
-						-->
+						
 
 					</div>
 
