added in rpa workshop stuff

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<section id="thingsicando">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Some stuff that i am working on recently</p>
+									<p>Some stuff that i have worked on recently</p>
 									<ul class="feature-icons">
 										<li class="fa-code"><!--[-->Robotics Process Automation<!--]--></li>
 										<li class="fa-coffee"><!--[-->Test Automation<!--]--></li>
@@ -74,6 +74,30 @@
 										<li class="fa-bolt"><!--[-->Write with my left hand<!--]--></li>
 										<li class="fa-users"><!--[-->Talk to you about random stuff<!--]--></li>
 									</ul>
+								</div>
+							</section>
+
+							<!-- Three -->
+							<section id="rpaworkshops">
+								<div class="container">
+									<h3>RPA Workshops</h3>
+									<p>Some of the materials that i created for lectures or workshops</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/uipath.png" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Process Automation with UiPath<!--]--></h4>
+												<p>Estimated time to go through with a class of 30-40 students is about 1.5 hours to 2 hours. I took more time to explain control flow designs as these can be confusing for non-tech students. The exercises focuses on web and excel automation.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/kantu.png" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Automation with Kantu Chrome Extension<!--]--></h4>
+												<p>Estimated time to go through with a class of 30-40 attendees is about 45 mins to 1 hour. Would recommend adding an additional exercise to test their understanding of the concepts</p>
+											</div>
+										</article>
+									</div>
 								</div>
 							</section>
 
