--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<h2>About Me</h2>
 
 									</header>
-									<p>Wrote my first line of Pseudocode when i was 15 during my computer studies class. Learnt about managing the finances of a business while studying for my accounting and finance diploma. Switched from business to computing in university and never looked back since.</p>
+									<p>Excited to be part of tech in this tech age. Started with computer studies writing psuedocode when i was 15. Learnt about managing the finances for businesses while studying for my accounting and finance diploma. Switched from business to computing in university and never looked back since.</p>
 								</div>
 							</section>
 
@@ -527,7 +527,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+								<li>&copy; Yingying. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 							</ul>
 						</div>
 					</section>
