--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
 					<ul>
 						<li><a href="#aboutme" class="active">About</a></li>
 						<li><a href="#thingsicando">Things I Can Do</a></li>
-						<li><a href="rpaworkshops">RPA Workshops</a></li>
+						<li><a href="#rpaworkshops">RPA Workshops</a></li>
 						<li><a href="#tableauprojects">Tableau Projects</a></li>
 						<li><a href="#webprojects">Web Projects</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ying-ying-a5476276/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://medium.com/@yaoyingyingg" class="icon fa-medium"><span class="label">Medium</span></a></li>
+						<li><a href="https://github.com/yingying96" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:yingying_0406@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -57,7 +56,7 @@
 										<h2>About Me</h2>
 
 									</header>
-									<p>Excited to be part of tech in this tech age. Started with computer studies writing psuedocode when i was 15. Learnt about managing the finances for businesses while studying for my accounting and finance diploma. Switched from business to computing in university and never looked back since.</p>
+									<p>Excited to be a tech student in this tech age. Started with computer studies writing psuedocode when i was 15. Learnt about managing the finances for businesses while studying for my accounting and finance diploma. Switched from business to computing in university and never looked back since.</p>
 								</div>
 							</section>
 
@@ -80,18 +79,18 @@
 							<!-- Three -->
 							<section id="rpaworkshops">
 								<div class="container">
-									<h3>RPA Workshops</h3>
-									<p>Some of the materials that i created for lectures or workshops</p>
+									<h3>Workshops</h3>
+									<p>Some of the RPA materials that i created for lectures or workshops. Feel free to contact me for any workshop opportunities.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/uipath.png" alt="" /></a>
+											<a href="https://drive.google.com/file/d/1ip-QlTpH0NBuB2nJj7IQm6o5rEEC1IMV/view?usp=sharing" class="image"><img src="images/uipath.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Process Automation with UiPath<!--]--></h4>
 												<p>Estimated time to go through with a class of 30-40 students is about 1.5 hours to 2 hours. I took more time to explain control flow designs as these can be confusing for non-tech students. The exercises focuses on web and excel automation.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/kantu.png" alt="" /></a>
+											<a href="https://drive.google.com/file/d/1SW8KTfDuFRLRKtLBjcAXC0_7hPDN1N4p/view?usp=sharing" class="image"><img src="images/kantu.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Automation with Kantu Chrome Extension<!--]--></h4>
 												<p>Estimated time to go through with a class of 30-40 attendees is about 45 mins to 1 hour. Would recommend adding an additional exercise to test their understanding of the concepts</p>
@@ -105,7 +104,7 @@
 							<section id="tableauprojects">
 								<div class="container">
 									<h3>Tableau projects</h3>
-									<p>Featuring some of the tableau projects that i worked on during my free time</p>
+									<p>Featuring some of the tableau projects that i worked on during my free time.</p>
 									<div class="features">
 										<article>
 											<a href="https://public.tableau.com/shared/H66233GS9?:display_count=no&:origin=viz_share_link" class="image"><img src="images/10yearsnus.png" alt="" /></a>
@@ -135,27 +134,27 @@
 							<section id="webprojects">
 								<div class="container">
 									<h3>Web projects</h3>
-									<p>Featuring some of the projects that i worked on during my university and internships </p>
+									<p>Featuring some of the projects that i worked on during my university and internships.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/freelancing.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Can I Help<!--]--></h4>
-												<p>Worked with three other team members on IS3106 project. Came up with a one stop portal for anyone to post jobs for freelancers</p>
+												<p>Worked with three other team members on IS3106 project. Came up with a one stop portal for anyone to post jobs for freelancers.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://yingying96.github.io/hats-docs/#/" class="image"><img src="images/hats-doc.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Documentation for HATS<!--]--></h4>
-												<p>Full documentation site for automated testing tool built during internship</p>
+												<p>Full documentation site for automated testing tool built during internship.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/construction.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Work In Progress!<!--]--></h4>
-												<p>Revamp existing website for client in the F&B industry</p>
+												<p>Revamp existing website for client in the F&B industry.</p>
 											</div>
 										</article>
 									</div>
