--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Yingying</a></h1>
 					<p><!--[-->Final Year NUS Computing Student<!--]--><br />
 					<!--[-->Majoring in Information Systems<!--]--></p>
