--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
 									<p>Featuring some of the projects that i worked on during my university and internships.</p>
 									<div class="features">
 										<article>
+											<a href="http://snowcup.tk/" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
+											<div class="inner">
+												<h4><!--[-->Snowcup<!--]--></h4>
+												<p>Created a brand new website for customers to view menu and contact snowcup.</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/freelancing.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Can I Help<!--]--></h4>
@@ -154,7 +161,7 @@
 											<a href="#" class="image"><img src="images/construction.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Work In Progress!<!--]--></h4>
-												<p>Revamp existing website for client in the F&B industry.</p>
+												<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.</p>
 											</div>
 										</article>
 									</div>
