--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 										<li class="fa-coffee"><!--[-->Test Automation<!--]--></li>
 										<li class="fa-cubes"><!--[-->Dashboards<!--]--></li>
 										<li class="fa-book"><!--[-->Software Development<!--]--></li>
-										<li class="fa-bolt"><!--[-->Write with my left hand<!--]--></li>
-										<li class="fa-users"><!--[-->Talk to you about random stuff<!--]--></li>
+										<li class="fa-bolt"><!--[-->Traveling<!--]--></li>
+										<li class="fa-users"><!--[-->Reviewing Google Places<!--]--></li>
 									</ul>
 								</div>
 							</section>
@@ -137,7 +137,7 @@
 									<p>Featuring some of the projects that i worked on during my university and internships.</p>
 									<div class="features">
 										<article>
-											<a href="http://snowcup.tk/" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Snowcup<!--]--></h4>
 												<p>Created a brand new website for customers to view menu and contact snowcup.</p>
@@ -158,7 +158,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/construction.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/portal.png" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Work In Progress!<!--]--></h4>
 												<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.</p>
