--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/portal.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/portal.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><!--[-->Work In Progress!<!--]--></h4>
 												<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.</p>
