--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 									<p>Featuring some of the projects that i worked on during my university and internships.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/portal.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Snowcup<!--]--></h4>
-												<p>Created a brand new website for customers to view menu and contact snowcup.</p>
+												<h4><!--[-->HR Talent Management System<!--]--></h4>
+												<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.</p>
 											</div>
 										</article>
 										<article>
@@ -158,12 +158,13 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/portal.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
 											<div class="inner">
-												<h4><!--[-->Work In Progress!<!--]--></h4>
-												<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.</p>
+												<h4><!--[-->Snowcup<!--]--></h4>
+												<p>Created a brand new website for customers to view menu and contact snowcup.</p>
 											</div>
 										</article>
+
 									</div>
 								</div>
 							</section>
