Updated coronavirus cases dashboard

--- a/index.html
+++ b/index.html
@@ -5,191 +5,277 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Yao Yingying</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Yingying</a></h1>
-					<p><!--[-->Final Year NUS Computing Student<!--]--><br />
-					<!--[-->Majoring in Information Systems<!--]--></p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#aboutme" class="active">About</a></li>
-						<li><a href="#thingsicando">Things I Can Do</a></li>
-						<li><a href="#rpaworkshops">RPA Workshops</a></li>
-						<li><a href="#tableauprojects">Tableau Projects</a></li>
-						<li><a href="#webprojects">Web Projects</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/ying-ying-a5476276/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://medium.com/@yaoyingyingg" class="icon fa-medium"><span class="label">Medium</span></a></li>
-						<li><a href="https://github.com/yingying96" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:yingying_0406@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
+<head>
+	<title>Yao Yingying</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<section id="header">
+		<header>
+			<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
+			<h1 id="logo"><a href="#">Yingying</a></h1>
+			<p>
+				<!--[-->Final Year NUS Computing Student
+				<!--]--><br />
+				<!--[-->Majoring in Information Systems
+				<!--]-->
+			</p>
+		</header>
+		<nav id="nav">
+			<ul>
+				<li><a href="#aboutme" class="active">About</a></li>
+				<li><a href="#thingsicando">Things I Can Do</a></li>
+				<li><a href="#rpaworkshops">RPA Workshops</a></li>
+				<li><a href="#tableauprojects">Tableau Projects</a></li>
+				<li><a href="#webprojects">Web Projects</a></li>
+			</ul>
+		</nav>
+		<footer>
+			<ul class="icons">
+				<li><a href="https://www.linkedin.com/in/ying-ying-a5476276/" class="icon fa-linkedin"><span
+							class="label">Linkedin</span></a></li>
+				<li><a href="https://medium.com/@yaoyingyingg" class="icon fa-medium"><span
+							class="label">Medium</span></a></li>
+				<li><a href="https://github.com/yingying96" class="icon fa-github"><span class="label">Github</span></a>
+				</li>
+				<li><a href="mailto:yingying_0406@hotmail.com" class="icon fa-envelope"><span
+							class="label">Email</span></a></li>
+			</ul>
+		</footer>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- One -->
+			<section id="aboutme">
+				<div class="image main" data-position="center">
+					<img src="images/banner.jpg" alt="" />
+				</div>
+				<div class="container">
+					<header class="major">
+						<h2>About Me</h2>
+
+					</header>
+					<p>Excited to be a tech student in this tech age. Started with computer studies writing psuedocode
+						when i was 15. Learnt about managing the finances for businesses while studying for my
+						accounting and finance diploma. Switched from business to computing in university and never
+						looked back since.</p>
+				</div>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<!-- Two -->
+			<section id="thingsicando">
+				<div class="container">
+					<h3>Things I Can Do</h3>
+					<p>Some stuff that i have worked on recently</p>
+					<ul class="feature-icons">
+						<li class="fa-code">
+							<!--[-->Robotics Process Automation
+							<!--]-->
+						</li>
+						<li class="fa-coffee">
+							<!--[-->Test Automation
+							<!--]-->
+						</li>
+						<li class="fa-cubes">
+							<!--[-->Dashboards
+							<!--]-->
+						</li>
+						<li class="fa-book">
+							<!--[-->Software Development
+							<!--]-->
+						</li>
+						<li class="fa-bolt">
+							<!--[-->Traveling
+							<!--]-->
+						</li>
+						<li class="fa-users">
+							<!--[-->Reviewing Google Places
+							<!--]-->
+						</li>
+					</ul>
+				</div>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
+			<!-- Three -->
+			<section id="rpaworkshops">
+				<div class="container">
+					<h3>Workshops</h3>
+					<p>Some of the RPA materials that i created for lectures or workshops.</p>
+					<div class="features">
+						<article>
+							<a href="https://drive.google.com/file/d/1ip-QlTpH0NBuB2nJj7IQm6o5rEEC1IMV/view?usp=sharing"
+								class="image"><img src="images/uipath.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Process Automation with UiPath
+									<!--]-->
+								</h4>
+								<p>Estimated time to go through with a class of 30-40 students is about 1.5 hours to 2
+									hours. I took more time to explain control flow designs as these can be confusing
+									for non-tech students. The exercises focuses on web and excel automation.</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://drive.google.com/file/d/1SW8KTfDuFRLRKtLBjcAXC0_7hPDN1N4p/view?usp=sharing"
+								class="image"><img src="images/kantu.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Automation with Kantu Chrome Extension
+									<!--]-->
+								</h4>
+								<p>Estimated time to go through with a class of 30-40 attendees is about 45 mins to 1
+									hour. Would recommend adding an additional exercise to test their understanding of
+									the concepts</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
 
-						<!-- One -->
-							<section id="aboutme">
-								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>About Me</h2>
+			<!-- Three -->
+			<section id="tableauprojects">
+				<div class="container">
+					<h3>Tableau projects</h3>
+					<p>Featuring some of the tableau projects that i worked on during my free time.</p>
+					<div class="features">
+						<article>
+							<a href="https://public.tableau.com/views/CoronavirusVirusInSingapore/Story1?:retry=yes&:display_count=y&:toolbar=n&:origin=viz_share_link"
+								class="image"><img src="images/Coronavirus map.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Novel Coronavirus Cases In Singapore
+									<!--]-->
+								</h4>
+								<p>Tracks the number of cases in Singapore as well as the places visited by the coronavirus cases</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://public.tableau.com/shared/H66233GS9?:display_count=no&:origin=viz_share_link"
+								class="image"><img src="images/10yearsnus.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->10 Years of National University of Singapore
+									<!--]-->
+								</h4>
+								<p>The purpose of this dashboard is to view the changes in the full-time undergraduate
+									population within each faculty during 2008 to 2018.</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://public.tableau.com/shared/4XP6C95DX?:display_count=yes&:origin=viz_share_link"
+								class="image"><img src="images/notablealumni.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Notable Alumni of NUS
+									<!--]-->
+								</h4>
+								<p>This dashboard is designed with a sunburst layout to illustrate the notable alumni of
+									NUS from various faculty.</p>
+							</div>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/bubbletea.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Bubble Tea Chain Stores In Singapore
+									<!--]-->
+								</h4>
+								<p>Inspired while i was walking past LiHo and realized that KOI is just 2 stores away
+									from their competitor.</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
 
-									</header>
-									<p>Excited to be a tech student in this tech age. Started with computer studies writing psuedocode when i was 15. Learnt about managing the finances for businesses while studying for my accounting and finance diploma. Switched from business to computing in university and never looked back since.</p>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="thingsicando">
-								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Some stuff that i have worked on recently</p>
-									<ul class="feature-icons">
-										<li class="fa-code"><!--[-->Robotics Process Automation<!--]--></li>
-										<li class="fa-coffee"><!--[-->Test Automation<!--]--></li>
-										<li class="fa-cubes"><!--[-->Dashboards<!--]--></li>
-										<li class="fa-book"><!--[-->Software Development<!--]--></li>
-										<li class="fa-bolt"><!--[-->Traveling<!--]--></li>
-										<li class="fa-users"><!--[-->Reviewing Google Places<!--]--></li>
-									</ul>
-								</div>
-							</section>
-
-							<!-- Three -->
-							<section id="rpaworkshops">
-								<div class="container">
-									<h3>Workshops</h3>
-									<p>Some of the RPA materials that i created for lectures or workshops. Feel free to contact me for any workshop opportunities.</p>
-									<div class="features">
-										<article>
-											<a href="https://drive.google.com/file/d/1ip-QlTpH0NBuB2nJj7IQm6o5rEEC1IMV/view?usp=sharing" class="image"><img src="images/uipath.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Process Automation with UiPath<!--]--></h4>
-												<p>Estimated time to go through with a class of 30-40 students is about 1.5 hours to 2 hours. I took more time to explain control flow designs as these can be confusing for non-tech students. The exercises focuses on web and excel automation.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://drive.google.com/file/d/1SW8KTfDuFRLRKtLBjcAXC0_7hPDN1N4p/view?usp=sharing" class="image"><img src="images/kantu.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Automation with Kantu Chrome Extension<!--]--></h4>
-												<p>Estimated time to go through with a class of 30-40 attendees is about 45 mins to 1 hour. Would recommend adding an additional exercise to test their understanding of the concepts</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="tableauprojects">
-								<div class="container">
-									<h3>Tableau projects</h3>
-									<p>Featuring some of the tableau projects that i worked on during my free time.</p>
-									<div class="features">
-										<article>
-											<a href="https://public.tableau.com/shared/H66233GS9?:display_count=no&:origin=viz_share_link" class="image"><img src="images/10yearsnus.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->10 Years of National University of Singapore<!--]--></h4>
-												<p>The purpose of this dashboard is to view the changes in the full-time undergraduate population within each faculty during 2008 to 2018.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://public.tableau.com/shared/4XP6C95DX?:display_count=yes&:origin=viz_share_link" class="image"><img src="images/notablealumni.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Notable Alumni of NUS<!--]--></h4>
-												<p>This dashboard is designed with a sunburst layout to illustrate the notable alumni of NUS from various faculty.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/bubbletea.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Bubble Tea Chain Stores In Singapore<!--]--></h4>
-												<p>Inspired while i was walking past LiHo and realized that KOI is just 2 stores away from their competitor.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-							<section id="webprojects">
-								<div class="container">
-									<h3>Web projects</h3>
-									<p>Featuring some of the projects that i worked on during my university and internships.</p>
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/portal.jpg" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->HR Talent Management System<!--]--></h4>
-												<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/freelancing.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Can I Help<!--]--></h4>
-												<p>Worked with three other team members on IS3106 project. Came up with a one stop portal for anyone to post jobs for freelancers.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://yingying96.github.io/hats-docs/#/" class="image"><img src="images/hats-doc.png" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Documentation for HATS<!--]--></h4>
-												<p>Full documentation site for automated testing tool built during internship.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
-											<div class="inner">
-												<h4><!--[-->Snowcup<!--]--></h4>
-												<p>Created a brand new website for customers to view menu and contact snowcup.</p>
-											</div>
-										</article>
-
-									</div>
-								</div>
-							</section>
+			<section id="webprojects">
+				<div class="container">
+					<h3>Web projects</h3>
+					<p>Featuring some of the projects that i worked on during my university and internships.</p>
+					<div class="features">
+						<article>
+							<a href="#" class="image"><img src="images/portal.jpg" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->HR Talent Management System
+									<!--]-->
+								</h4>
+								<p>Creating a HR Talent Management System for client through IS4103 Capstone Project.
+								</p>
+							</div>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/freelancing.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Can I Help
+									<!--]-->
+								</h4>
+								<p>Worked with three other team members on IS3106 project. Came up with a one stop
+									portal for anyone to post jobs for freelancers.</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://yingying96.github.io/hats-docs/#/" class="image"><img
+									src="images/hats-doc.png" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Documentation for HATS
+									<!--]-->
+								</h4>
+								<p>Full documentation site for automated testing tool built during internship.</p>
+							</div>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/bubbletea.JPG" alt="" /></a>
+							<div class="inner">
+								<h4>
+									<!--[-->Snowcup
+									<!--]-->
+								</h4>
+								<p>Created a brand new website for customers to view menu and contact snowcup.</p>
+							</div>
+						</article>
 
 					</div>
+				</div>
+			</section>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; Yingying. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
-							</ul>
-						</div>
-					</section>
+		</div>
 
+		<!-- Footer -->
+		<section id="footer">
+			<div class="container">
+				<ul class="copyright">
+					<li>&copy; Yingying. All rights reserved.</li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+				</ul>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
